# sda

./: .gitignore  NOTICE.md  README.md  TECHNICAL_DESIGN.md  TECHNICAL_DESIGN_PHASE8_9.md  TECHNICAL_DESIGN_Phase3.md  deploy.md  docker-compose.yml  exclude_files.txt  sda-de[ployment-guide.md
backend/: Dockerfile  Test.ipynb  deploy.md  iam.json  ingest.py  packages.txt  phase5_ingest.py  pyproject.toml  requirements.txt  requirements_bak.txt  worker.py
backend/app/: ai_service.py  database.py  github_oauth.py  init_db.py  main.py  models.py  project_ingest.py  speech_service.py  test-rabbitmq.py
backend/app/agents/: __init__.py  graph.py  manager.py  parser.py  tools.py
backend/app/api/: chat.py  settings.py  snippets.py
backend/app/messaging/: rabbitmq.py
backend/data/: chat_history.jsonl
backend/docs/: LICENSE.md  TECHNICAL_DESIGN.md  api_service.txt  frontend_styling.txt
backend/postman/: SDA-Local.postman_environment.json  SDA-Phase1-5.postman_collection.json  SDA-Phase6.postman_collection.json
frontend/: index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AgentWorkspace.tsx  AnalysisDisplay.tsx  ChatInput.tsx  ChatPage.tsx  ChatWindow.tsx  CodeAnalyzer.tsx  CodeReviewPanel.tsx  GenerationArea.tsx  GithubIntegration.tsx  HistoryTable.tsx  ModeToggle.tsx  OutputDisplay.tsx  ProjectUpload.tsx  Recorder.tsx  SourcesList.tsx
frontend/src/lib/: api.ts
frontend/src/lib/api/: agentAsync.ts  chat.ts  settings.ts  snippets.ts
frontend/src/lib/hooks/: useAgentPolling.ts
frontend/src/redux/: analyzerSlice.ts  chatSlice.ts  generationSlice.ts  store.ts
