[project]
requires-python = ">=3.10,<3.13"
name = "smart-dev-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for SDA"
authors = [{ name = "Santosh Narayanan", email = "santosh33@gmail.com" }]
# Define ALL required application dependencies here as a simple list
dependencies = [
    "fastapi",
    "pydantic",
    "langchain",
    "python-dotenv",
    "psycopg2-binary",
    "sqlmodel",
    "langchain-community",
    "langchain-openai",
    "qdrant-client",
    "sentence-transformers",
    "rank-bm25",
    "rapidfuzz",
    "uvicorn[standard]",
    "pillow",
    "python-multipart",
    "langchain-core",
    "langchainhub",
    "langchain-experimental",
    "openai-whisper"

]

# This section is needed to tell Python how to build the project
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
